Add images to operational visibility article

--- a/src/articles/operational-observability.mdx
+++ b/src/articles/operational-observability.mdx
@@ -1,7 +1,7 @@
 ---
 title: System observability
 description: Things to measure/capture in your systems.
-date: 2022-01-09
+date: 2022-01-15
 faIcon: faRuler
 ---
 
@@ -42,6 +42,8 @@ These signals are what should trigger alarms.
 They should be explicitly designed they should have a high signal/noise ratio.
 You should also be able to use these metrics to confirm recovery once the issue has been mitigated.
 
+![health signals in context of a system](./images/health-signals.png)
+
 These metrics do not tell you what caused the issue and they don't tell you how to fix it. They just detect the presence of an issue.
 
 Examples:
@@ -58,6 +60,8 @@ Examples:
 
 These metrics surface a (usually recent) history your system's behaviour.
 They are used to help _locate_ where errors are being thrown in your system, help _diagnose_ the issue, and help _confirm_ that actions made against the service are affecting behaviour as expected.
+
+![diagnostic metrics in context of a system](./images/diagnostic-metrics.png)
 
 Examples:
 
@@ -79,6 +83,8 @@ They are often diagnostic metrics on which you can set up a threshhold because y
 Because of this, they often have a lower signal/noise ratio. You want to hook up alerts to these, but usually of lower severity than health metrics.
 These alerts should trigger investigations rather than fire-fighting.
 
+![scaling signals in context of a system](./images/scaling-signals.png)
+
 Examples:
 
 - threshholds on resource usage like sustained 60% CPU usage or 80% disk usage
@@ -94,6 +100,8 @@ Examples:
 These are records of the individual actions taken by _your systems_ when fulfilling a customer request.
 These help to track a request through multiple systems to determine where an issue occurred or to gain insight into your global system behaviour.
 
+![distributed trace in context of a system](./images/distributed-trace.png)
+
 ## Event logs
 
 <PullQuote>
@@ -103,6 +111,15 @@ These help to track a request through multiple systems to determine where an iss
 These logs help you diagnose ongoing/recent issues or build insight into your system's behaviour.
 Retention of these logs needs to be long enough to help you diagnose events in the recent past (for me that's 3-6 months).
 
+![event logs in the context of a system](./images/investigation-logs.png)
+
+<div className="text-center">
+  <i>
+    The logs in the stage above correspond to the 2nd server trace in the{" "}
+    <a href="#distributed-traces">distributed traces</a> section.
+  </i>
+</div>
+
 ## Audit logs
 
 <PullQuote>
@@ -110,7 +127,7 @@ Retention of these logs needs to be long enough to help you diagnose events in t
 </PullQuote>
 
 These logs help you audit the work done by your system and can often be requested by customers or legal entities outside the company.
-Retention of these logs should be permanent.
+Retention of these logs should be long enough to cover legal responsibilities e.g. on the scale of one or more years.
 
 # Understanding your customer experience
 
@@ -120,6 +137,8 @@ Retention of these logs should be permanent.
 
 These are records of individual actions taken by a customer during a workflow.
 They help you build insight in how your product is being used and where customers are potentially losing interest/getting stuck/taking too long.
+
+![event logs in the context of a system](./images/customer-tracing.png)
 
 Example questions that traces can help answer:
 
@@ -132,6 +151,8 @@ Example questions that traces can help answer:
 
 These are analytical investigations or workflows which aggregate and process many customer traces to gain insight across multiple customers.
 They help identify groups of usecases and customer personas to which you can tailor your experiences.
+
+![customer analytics in the context of a system](./images/customer-analytics.png)
 
 Examples results for analytical workflows:
 
