--- a/src/articles/operational-observability.mdx
+++ b/src/articles/operational-observability.mdx
@@ -29,6 +29,8 @@ Ideally you should be able to answer any of the following for your system within
 - **metric** a _stream_ of events sent from your systems. These are usually **numeric** e.g. latencies of calls against your service or **boolean** e.g. whether a worflow was successful. Metrics can be processed (e.g. counting number of successful wokflows in a minute) and/or combined (e.g. successes/total-workflows to get a success-ratio metric).
 - **signal** an event that is triggered automatically. It is intended to communicate a _change of state_ e.g. from healthy to unhealthy. Often this requires both a metric and a condition (e.g. a threshhold) that will trigger based on the metric.
 - **log** individual events written to files. Logs can then be processed periodically to create metrics or they can be queried/processed sporadically during investigations.
+- **signal-to-noise ratio** the ratio of useful/reliable events to the noisy/unreliable events. An alarm that only triggers when there's a real problem has a high signal-to-noise ratio. An alarm that triggers lots of false alarm has a low ratio. See also [the wikipedia entry](https://en.wikipedia.org/wiki/Signal-to-noise_ratio).
+- **canary service** a.k.a. [synthetic monitoring](https://docs.aws.amazon.com/AmazonCloudWatch/latest/monitoring/CloudWatch_Synthetics_Canaries.html) is a system which calls your system and pushes metric streams for its success rate. Used to provide early detection of failure.
 
 # Detecting and mitigating impact
 
