Restructure inexpensive mechanisms article

--- a/src/articles/operational-observability.mdx
+++ b/src/articles/operational-observability.mdx
@@ -3,6 +3,7 @@ title: System observability
 description: Things to measure/capture in your systems.
 date: 2022-01-15
 faIcon: faRuler
+tocDepth: 1
 ---
 
 import { PullQuote } from "../components"
