Restructure ops journal

--- a/src/articles/inexpensive-mechanisms.mdx
+++ b/src/articles/inexpensive-mechanisms.mdx
@@ -273,17 +273,25 @@ Team-specific journal of a periodic operational review.
 
 <PullQuote>How did our systems perform for our customers last week?</PullQuote>
 
-**What does this promote?**
+### Problem
 
-Knowledge sharing on operational events / historical records of operational events / data gathering of operational events / data analysis of operational events / record of operational issues / record of operational decisions.
+The team needs a place to track the operational health of its systems over time,
+both for future reference and as a place where team members and stakeholders can understand
+the operational posture of their system.
 
-**When do you use it?**
+### Concept
 
-Every operational review session.
+Periodically write and publish a journal of the operational health of our systems.
+The journal should contain all the most important metrics that need actively monitoring
+as well as information on the current customer experience and the operational challenges the
+team faces. Finally it should list ongoing operational action items the team takes.
 
-**Why is it useful?**
+Use the journal to drive our operational reviews so that you ensure you answer the most
+important questions during the session. Make entries this accessible to stakeholders.
 
-Record of the review for tracking, knowledge-sharing, reference and long-term trend analysis.
+### Template journal format
+
+I've found the following format to be useful:
 
 ```md
 # YYYY-MM-DD Ops review
