Add article for unit testing sagas

--- a/src/articles/redux-side-effects.mdx
+++ b/src/articles/redux-side-effects.mdx
@@ -2,7 +2,7 @@
 title: Side effects in React-Redux
 description: Some ways to perform side-effects in React-Redux.
 date: 2021-02-14
-faIcon: faDragon
+faIcon: faAtom
 ---
 
 The default model for Redux-like architectures doesn't have a good mechanism to deal with side-effectful actions (e.g. API calls, I/O operations).
