--- a/src/articles/redux-unit-test-saga.mdx
+++ b/src/articles/redux-unit-test-saga.mdx
@@ -1,20 +1,26 @@
 ---
 title: Unit testing a redux-saga saga
 description: A method for unit testing a saga
-date: 2021-02-29
+date: 2022-02-29
 faIcon: faAtom
 ---
 
-# Problem
+import { Link, Card } from "gatsby"
 
 [redux-saga](https://redux-saga.js.org/) is Redux middleware that provides functionality for <Link to={"/articles/redux-side-effects"}>executing side-effects in a React-Redux app</Link>.
-Essentially sagas are [function generators](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/function*) which `yield` to middleware when a side-effect needs to run.
+While I've found sagas powerful to use, I initially found it difficult to unit-test their logic.
 
-It isn't immediately obvious how to test this logic, especially if you don't often work with function generators.
+This article is a reference for the best approach I've found so far. I've added an example of this approach to [codesandbox](https://codesandbox.io/s/unit-testing-sagas-75l7n?file=/src/saga.ts); feel free to fork it and play around with it.
 
-## Example saga
+We will dive straight into the testing. If you are unfamiliar with redux-saga and function generators I recommend reading up on these topics first.
+Here are some starting points:
 
-Here's a toy saga that we'd like to test.
+- [function generators MDN reference](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Statements/function*)
+- [redux-saga tutorial](https://redux-saga.js.org/docs/introduction/BeginnerTutorial).
+
+**Example saga**
+
+Let's define a toy saga that we can write some tests around test. It makes two remote calls, selects fields from the results and dispatches that information to the redux store.
 
 ```typescript
 // saga.ts
@@ -50,12 +56,15 @@ export function* fetchUserDataOnAction() {
 }
 ```
 
+<div className="mb-5"></div>
+
 # Testing sagas directly
 
-The concept of this approach is to directly invoke sagas in your tests.
-This is the main approach that I've found when reading on how to test sagas online.
+We'll first start by understanding a direct approach to testing sagas.
+It is the main approach that I've found when reading on how to test sagas online.
 
-A way to approach this testing that I've found useful is to think about function generators as iterators for steps in a workflow.
+The concept of this approach is to directly step through saga functionality in your tests.
+To understand what we're doing here, I've found useful is to think about function generators as iterators for steps in a workflow.
 
 ```javascript
 function* fetchData() {
@@ -78,6 +87,7 @@ iterator.next()
 We can do something similar in our tests to step through behaviour and run assertions on our sagas.
 
 ```typescript
+// direct.test.ts
 import { put } from "redux-saga/effects"
 import { fetchUserData, updateUserData } from "./saga"
 
@@ -93,14 +103,15 @@ describe("fetchUserData", () => {
     const mockUserResponse = { id: "1234", name, immunities: undefined }
 
     // should call /userAttributes
-    iterator.next(mockUserResponse)
+    iterator.next(mockUserResponse) // pass mock response of previous step back to the saga
     const mockUserAttributeResponse = {
       id: undefined,
       name: undefined,
       immunities,
     }
 
-    const reduxAction = iterator.next(mockUserAttributeResponse).value // put redux action
+    // should dispatch redux action with results
+    const reduxAction = iterator.next(mockUserAttributeResponse).value
     expect(reduxAction).toEqual(put(updateUserData({ name, immunities })))
   })
 })
@@ -113,6 +124,8 @@ Specifically, we need to know the order in which the saga will `yield` and to pr
 This makes the test brittle; if we change the order of yields or add new behaviour, we need to update our tests.
 
 Another issue I have with this method is that we are invoking the saga differently to how we would in our actually code where we would be dispatching redux actions.
+
+<div className="mb-5"></div>
 
 # Unit testing sagas
 
@@ -151,6 +164,7 @@ export const testRunSaga = <S extends Saga>(
 Using this utility, we can write a test that allows us to test a saga as a unit.
 
 ```typescript
+// unit.test.ts
 import * as api from "./api"
 import {
   fetchUserDataAction,
@@ -177,9 +191,13 @@ describe("fetchUserDataOnAction", () => {
   it("should make expected calls and return data", async () => {
     const { channel, dispatched } = testRunSaga(fetchUserDataOnAction)
 
+    // unit input: dispatch redux action
     channel.put(fetchUserDataAction)
-    await new Promise(resolve => setTimeout(resolve)) // let async run
 
+    // let async run
+    await new Promise(resolve => setTimeout(resolve))
+
+    // unit output: assert correct resulting action has been dispatched to the store
     const expectedPutAction = updateUserData({
       name: user.name,
       ...userAttributes,
@@ -188,3 +206,14 @@ describe("fetchUserDataOnAction", () => {
   })
 })
 ```
+
+This way our tests do not need to know about the inner workings of the saga aside from integration with API.
+I think this strongly reduces the brittleness of tests.
+Also, we're using the contract that we'd use in the component I also think this improves the readability of the test.
+
+<Card>
+  <span className="quicksand">
+    Thanks for reading! Do you have feedback or ideas on how to improve on this
+    approach? Reach out to me!
+  </span>
+</Card>
