Add conclusion to article

--- a/src/articles/system-operational-maturity.mdx
+++ b/src/articles/system-operational-maturity.mdx
@@ -213,3 +213,10 @@ This tooling has audit functionality to track mutating user actions against prod
 ## Level 4
 
 Our operational tooling is aware of current system health and can surface warnings for potentially unsafe actions.
+
+# Conclusion
+
+We can use the different axes of operational maturity to classify the maturity level of our systems (or features).
+For each axis, we can evaluate our current maturity and determine what steps would be needed to progress it to the next level.
+We can then assess the cost of doing that work versus the benefit we expect to gain.
+From this cost-benefit analysis we can prioritise the work in our roadmaps.
