--- a/src/articles/system-operational-maturity.mdx
+++ b/src/articles/system-operational-maturity.mdx
@@ -1,21 +1,22 @@
 ---
-title: System operational maturity
-description: A conceptual model for how systems can evolve to become easier and more reliable to operate.
+title: Operational capability roadmap
+description: A method for analyzing operational capabilities of a system and determining next steps.
 faIcon: faSeedling
-date: 2022-01-30
+date: 2022-03-23
+tocDepth: 2
 ---
 
 import { Link } from "gatsby"
 import { Card } from "../components"
 
-This is a conceptual breakdown for thinking through the maturity of our systems with respect to **operations**.
+This document describes a method for thinking through operational capabilities of our systems to get a high-level understanding of where we can invest and what it would cost us.
 
 # Problem
 
-When owning systems, we often need to plan work to make them cheaper and more reliable to maintain.
-We often know that this work needs to be done, but I've previously found it difficult to determine how to go about planning this work so that we can prioritise and add it to our roadmap.
+Investment into the operational capabilites of our systems is important to enable us to maintain our systems in a healthy state.
+Despite the importance of this work, I've previously found it difficult to prioritise and track operational investment with respect to other work on our roadmap.
 
-It would be useful to have a systematic approach to determine the current operational state of our systems, and to think about how we can evolve them.
+It would be useful to have a systematic approach with which to analyze our systems so that we can determine and prioritize the next operational investments of our systems.
 
 # Glossary
 
@@ -23,10 +24,10 @@ It would be useful to have a systematic approach to determine the current operat
 - **scaling** - the work needed to enable the system to perform what _it is currently doing_ at _a larger scale_. For this we think big; 2x,5x,10x, or 100x the current load.
 - **features** - the work needed to _add new capabilites_ to the system.
 
-In this article we are specifically looking at maturity of **operations**.
+In this article we are specifically looking at **operations**.
 
 I added definitions for scalability and features to clarify what operations is _not_.
-With respect to the maturity of scalability and feature work, each requires different approaches which are beyond the scope of this article.
+Investments into both scalability and feature-work both require their own approaches, which are beyond the scope of this article.
 
 <Card heading="Recommended reading">
 
@@ -35,188 +36,291 @@ I recommend that you skim through that article before continuing.
 
 </Card>
 
-# Axes of operational maturity
+# Axes of operational investment
 
-Operating systems is the act of keeping its current state healthy.
-We can think of this as the act of detecting issues with our systems and then mitigating them.
+Before jumping into solution-mode I think it is useful to think about operations from first-principles
+and come up with some explicit definitions for what we're trying to achieve by making these investments.
 
-Conceptually this means we need 3 core abilities in our system:
+At its core, operating a system is the act of keeping its current state healthy.
+To do this, we conceptually need 3 core abilities:
 
 1. **Detecting problems**
-1. **Diagnosing the root causes**
+1. **Diagnosing problems**
 1. **Mitigating impact**
 
-From these I find it useful to further break up detection and mitigation,
-giving us 5 "axes" that we can invest in to make operations more effective, cheaper, more reliable and scalable:
+I've found that further breaking up detection and mitigation gives a decomposition that is more useful in practice.
+This gives us 5 "axes" that we can invest in to make operations more effective, cheaper, more reliable and scalable:
 
-1. **Detecting problems in production**
-1. **Detecting problems before they reach production**
-1. **Diagnosing the root causes of our problems**
-1. **Mitigating impact by reverting to a previously-known stable state**
-1. **Mitigating impact by mutating the system**
+1. **Detecting problems in production** - investing in this reduces our time to detection for issues that are actively affecting customers.
+1. **Detecting problems before they reach production** - investing in this reduces the risk of releasing issues with new changes.
+1. **Diagnosing issues in production** - investing in this reduces the time it takes to determine what an actual issue is.
+1. **Mitigating impact by reverting to a previously-known stable state** - investing in this reduces the time it takes to mitigate an issue in production for issues that can be solved with a rollback.
+1. **Mitigating impact by mutating the system** - investing in this reduces the time it takes to mitigate an issue in production for issues that require a fix/change to be deployed or applied to our system.
 
-For each of these axes, we can define levels of maturity which can be reached by developing operational capabilities and processes.
+# Building and applying a capability roadmap
 
-## What level of maturity is good enough?
+Armed with a concrete understanding of our investment goals we now need to build a plan for how we can practically achieve them.
 
-Which level of maturity we need for our systems heavily depends on our context.
-Improving maturity is an investment.
-We spend engineering resources and we spend on infrastructure; our return on this investment should justify the cost.
-I think it's important to go through a cost/benefit exercise before commiting to a specific maturity level.
+In these next sections I want to lay out a general approach for building and using a capability roadmap.
+The thinking is that systems will have differing operational needs depending on their context so,
+instead of trying to build a roadmap that will fit all systems,
+we will develop a general approach for developing a roadmap that can be tweaked for individual systems.
 
-# Detecting problems in production
+## 1 Levels of capability
+
+In practice investments are easier to plan, prioritize, and execute if we do them iteratively.
+For each of our axes up investment in our axes into
+
+For each of axis of operational investment, we want to describe levels for our ability to operate on that axis.
+We start with asking ourselves the bare minimum capability would look like for this axis, and what the highest level of sophistication would be for this axis.
+We then try to identify a series of levels that can take us from the bare-minimum level to the highest level.
+
+It is important for each level to describe a _complete_ capability without prescribing how to achieve that capability.
+
+```yaml
+# ✔ good: describes a complete capability without describing how it's achieved
+We can infer root causes from individual system events
+
+# ❌ bad: does not describe a complete capability (pushing logs off hosts isn't useful by itself)
+# and describes a technical solution (a log pushing system)
+We have a system to push logs off of cloud hosts
+```
+
+Once we're done, we should have a set of levels/milestones for each axis.
+
+```yaml
+# Example
+Axis: Diagnosing issues in production
+Levels:
+  1. Capability: We infer issues by noticing differences in external behaviour of our system
+  2. Capability: We can filter and process key system events
+  3. Capability: We can correlate changes in behaviour of multiple system events
+  4. Capability: We have aggregations of current top causes of issues in our system
+  5. Capability: We have a near-realtime, distributed trace of issues and key events in our system
+```
+
+We now have some high-level iterations and milestones. These give us a good sense of what there is to gain by investing in a specific axis.
+
+## 3 Component breakdown
+
+For each level of capability, we can now determine identify the high-level components we would need to implement to achieve this capability.
+
+```yaml
+# Example
+Axis: Diagnosing issues in production
+Levels:
+    # ...
+    2.  Capability: We can filter and process key system events
+        Components:
+            Event logs in our web service: system events written as log entries
+            Log pusher system: logs pushed from service hosts to a central location
+            Log dive system: ability to filter/search logs pushed from our hosts
+            Runbook: a reference of how to identify common issues from our logs
+    # ...
+```
+
+At this point we now have tool that shows us a holistic view of what units of work that _could_ be built if we want to invested in operational capabilities.
+We'll call this tool our **capability roadmap**. We now need to use this tool to take a look at our actual system.
+
+## 4 Analyze a specific system
+
+For each axis and capability, analyze what components currently exist in our system.
+This, along with some of our own context, should give us a good indication of what our current level of capability is.
+From here we can use our tool to identify the components we need to build to take us to the next level.
+It is now also possible to estimate the work implement/integrate each of these components.
+
+At this point we now have an idea of the costs needed to take us to the next level for each of our axes.
+
+## 5 Cost vs benefit and prioritization
+
+Now that we have an idea of our current capabilities, an idea of what the next cabability will give us, and an idea of the cost to get us to the next capability,
+we should be able to make a decision driven by cost vs. benefit about whether or not we want to invest into any of our axes.
+This cost/benefit should also give us a good sense of which axis we want to invest in first (which will depend on our context).
+
+# Deep example: Web-service capability roadmap
+
+## Detecting problems in production
 
 Investing in this axis reduces the time and effort needed to detect issues.
 
 ![](./images/operational-maturity-detecting-production.png)
 
-## Level 1
+```yaml
+Axis: Detecting problems in production
+Levels:
+    1.  Capability: >
+            We compare actual behaviour against documented behaviour to infer system 
+            health.
+        Components:
+            - Documentation of healthy system behaviour
+            - Runbook for common error senarios
+    2.  Capability: >
+            We infer system health by looking at the behaviour of diagnostic events 
+            emitted by the system.
+        Components:
+            - System logs for key events
+            - Ability to dive into logs
+            - Diagnostic metrics pushed by the system
+            - Dashboard for diagnostic metrics
+    3.  Capability: >
+            We determine system health through dedicated system health signals.
+        Components:
+            - Health signals
+            - Health dashboard with overview of health signals
+    4.  Capability: >
+            We automatically alarm and roll back recent changes using health signals.
+        Components:
+            - automatic alerts linked to health signals
+            - communication channel in which to publish alerts
+```
 
-We document context around how our system behaves when it is healthy.
-We compare actual behaviour against this context to infer health.
-
-## Level 2
-
-We log out major errors in our systems. We have some diagnostic metrics pushed by our systems.
-We use both logs and diagnostic metrics when investigating to infer whether our system is healthy.
-
-## Level 3
-
-We have defined and implement explicit health signals for our system.
-We no longer need to perform an investigations to determine health in the vast majority of cases.
-We periodically monitor these health signals know the availability of our system.
-
-## Level 4
-
-We use our health signals to automatically alert the team when system availability drops.
-We can use health signals to trigger other automated workflows e.g. rollbacks.
-
-# Detecting problems before production
+## Detecting problems before production
 
 Investing in this axis improves our confidence that changes will not cause regression in our existing behaviour.
 
-There can be two types of impact from new changes in production:
+There can be two types of impact from new changes, which we want to catch:
 
 - **availability** - when a change causes errors/crashes in the system or degrades the performance to where it affects usability
-- **semantic** - when a change causes incorrect behaviour
+- **semantic** - when a change causes incorrect behaviour without affecting the availablity of the system
 
 Availability regressions can be caught before they reach production using staging/pre-prod environments on which we monitor system health.
 
-Semantic regressions are more complicated to catch; the majority of these levels of maturity address this style of problem.
+Semantic regressions are more complicated to catch; the majority of these levels of investment address this style of problem.
 
 ![](./images/operational-maturity-detecting-preproduction.png)
 
-## Level 1
+```yaml
+Axis: Detecting problems before production
+Levels:
+    1.  Capability: >
+            We test our implementations against explicit definitions of correct 
+            semantic behaviour.
+        Components:
+            - explicit definitions of correct behaviour for each change
+    2.  Capability: >
+            We have review processes for our designs and implementations.
+        Components:
+            - code review process
+            - design review process
+            - security review process
+            - UX/usability review process
+    3.  Capability: >
+            We have regression tests in our implementations for correct semantic 
+            behaviour.
+        Components:
+            - unit tests
+            - regression tests
+    4.  Capability: >
+            We have a pre-production version of our system that we deploy and test 
+            new changes in.
+        Components:
+            - pre-prod environment in deployment pipeline before production deployments
+    5.  Capability: >
+            We have automated testing of correct semantic behaviour in pre-production.
+        Components:
+            - end-to-end tests running on pre-production before deployment to production
+    6.  Capability: >
+            We have automated testing of availability in pre-production
+        Components:
+            - health signals in pre-production that match those in production
+            - integration tests running on pre-production before deployment to production
+```
 
-We explicitly define correct semantic behaviour for the changes we make before we implement them.
-We use those definitions during implementation to validate that the code behaves correctly.
-
-## Level 2
-
-We have review processes for design and implementation which allow more than one person to evaluate changes.
-
-## Level 3
-
-We have regression tests in our implementations which assert the correct semantic behaviour.
-We actively add these as part of new changes on critical system behaviours.
-
-## Level 4
-
-We have a pre-production version of our system that we make changes to before affecting production.
-We perform investigations on this system to determine if the changes have caused regressions.
-
-## Level 5 - Semantic
-
-We have end-to-end tests which run on our pre-production environment and which assert that the system behaves correctly.
-
-## Level 5 - Availability
-
-We have defined health signals on our pre-production environment that match those on production.
-We monitor those health signals to determine whether changes would cause availability impact.
-We have integration tests that validate that we still interact with other systems correctly.
-
-## Level 6
-
-We have automated mechanisms to catch regressions in both availability and semantics.
-
-# Diagnosing issues in production
+## Diagnosing issues in production
 
 ![](./images/operational-maturity-diagnosing.png)
 
-## Level 1
+```yaml
+Axis: Diagnosing issues in production
+Levels:
+    1.  Capability: >
+            We infer issues by noticing differences in external behaviour of our system
+        Components:
+            - Runbook of how to diagnose common errors from external system behvaviour
+    2.  Capability: >
+            We can filter and process key system events
+        Components:
+            - System logs for key events
+            - Ability to dive into logs
+            - Runbook of how to diagnose common errors from system logs
+    3.  Capability: >
+            We can correlate changes in behaviour of multiple system events
+        Components:
+            - Diagnostic metrics
+            - Diagnostic metric dashboard
+            - Runbook of how to diagnose common errors from diagnostic metrics
+    4.  Capability: >
+            We have aggregations of current top causes of issues in our system
+        Components:
+            - Diagnostic metric aggregations (historograms/percentiles)
+            - Pre-prepared queries that show top causes of errors in the system
+    5.  Capability: >
+            We can track requests through our system in near-realtime
+        Components:
+            - Distributed tracing integrated throughout system
+            - Tooling for querying/filtering distributed traces in near-realtime
+```
 
-We document the core data-flows of our system and how those result in behaviour.
-We compare actual behaviour against this context to infer potential root causes.
 
-## Level 2
-
-We log out key events performed by our systems.
-We analyse these logs to confirm the current behaviour of the system and try to find anomalies in these logs.
-We infer potential root causes based on our observations of the logs.
-
-## Level 3
-
-We push metrics around key events performed by our systems.
-We graph these metrics over time on dashboards.
-We document the expected behaviour of these metrics.
-We analyse the graphs to detect anomalies in behaviour.
-We combine graph context with samples of log entries to make data-informed hypotheses of our root cause.
-
-## Level 4
-
-We apply statistical processing to our logs and metrics to help us reduce noise and to highlight anomalies.
-We have pre-prepared methods of finding the "top N" for important metrics e.g. top 10 customers driving load; top 10 operations which result in failure.
-
-## Level 5
-
-We are able to trace individual calls through our distributed systems.
-We can sample these traces to get near-realtime samples of system behaviour.
-We are able to run adhoc queries on these traces in near-realtime.
-
-# Mitigating issues by reverting to previous stable state
+## Mitigating issues by reverting to previous stable state
 
 ![](./images/operational-maturity-mitigating-revert.png)
 
-## Level 1
+```yaml
+Axis: Mitigating issues by reverting to previous stable state
+Levels:
+    1.  Capability: >
+            We have previous versions of state that we use to manually roll back
+        Components:
+            - Previous versions of production code
+            - Runbook for how to roll back to a previous version of production code
+            - Regular backups of databases/system state
+            - Runbook for how to roll back to a backed up state
+    2.  Capability: >
+            We programmatically run revert/restore actions
+        Components:
+            - Scripts that can execute common backup/restore/revert actions
+    3.  Capability: > 
+            We automatically roll back impactful changes when degredation is detected
+        Components:
+            - System health signals
+            - Ability to detect if a change was deployed recently
+            - Ability to trigger a rollback action from a health signal
+```
 
-We keep track of state that we can use to revert/restore e.g. periodic backups of databases.
-We have a documented process for rolling back changes or restoring previously backed-up state.
 
-## Level 2
-
-We use scripts that programmatically run revert/restore actions.
-These scripts are checked into our codebase and peer reviewed.
-
-## Level 3
-
-Our health signals can trigger either scripts or services to automatically roll back impactful changes.
-
-# Mitigating issues by mutating production
+## Mitigating issues by mutating production
 
 ![](./images/operational-maturity-mitigating-mutate.png)
 
-## Level 1
-
-We have runbooks for running mutating actions against production.
-
-## Level 2
-
-We use scripts to perform common/particularly risky mutating actions.
-These scripts are checked into code and peer reviewed.
-
-## Level 3
-
-We have tooling that allows actions to be taken against prod without needing to check out code.
-This tooling provides user validation.
-This tooling has audit functionality to track mutating user actions against prod.
-
-## Level 4
-
-Our operational tooling is aware of current system health and can surface warnings for potentially unsafe actions.
+```yaml
+Axis: Mitigating issues by mutating production
+Levels:
+    1.  Capability: >
+            We run mutating actions manually against production
+        Components:
+            - Runbooks for how production can be mutated
+    2.  Capability: >
+            We have a processes to guide us through safely mutating production
+        Components:
+            - Process for determining when we can manually mutate production
+            - Scripts for common or high-risk mutating actions
+            - Runbooks for when/how to run scripts against production
+    3.  Capability: >
+            We have dedicated tooling for making changes to production
+        Components:
+            - WebUI or CLI that exposes possible mutating actions against production
+            - Audits that tracks when changes are made and by whom
+    4.  Capability: >
+            We have contextual validation of mutating actions
+        Components:
+            - Tooling is aware of system health
+            - Tooling raises warnings/adds friction for particularly risky operations
+```
 
 # Conclusion
 
-We can use the different axes of operational maturity to classify the maturity level of our systems (or features).
-For each axis, we can evaluate our current maturity and determine what steps would be needed to progress it to the next level.
-We can then assess the cost of doing that work versus the benefit we expect to gain.
-From this cost-benefit analysis we can prioritise the work in our roadmaps.
+Building and applying an operational capability roadmap can give us a holistic view of what operational investments we can make to our systems.
+By defining capabilities and by breaking down the components we need to attain those capabilities, 
+we gain an understanding of the cost vs benefit of these investments. 
+We can then take an informed decision about whether or not to invest further and, if we do, where to prioritize these further investements.
