Fix incorrect import

--- a/src/articles/redux-unit-test-saga.mdx
+++ b/src/articles/redux-unit-test-saga.mdx
@@ -5,7 +5,8 @@ date: 2022-01-29
 faIcon: faAtom
 ---
 
-import { Link, Card } from "gatsby"
+import { Link } from "gatsby"
+import { Card } from "../components"
 
 [redux-saga](https://redux-saga.js.org/) is Redux middleware that provides functionality for <Link to={"/articles/redux-side-effects"}>executing side-effects in a React-Redux app</Link>.
 While I've found sagas powerful to use, I initially found it difficult to unit-test their logic.
