Rename Gatsby notes article to match one for Java

--- a/src/articles/gatsby-notes.mdx
+++ b/src/articles/gatsby-notes.mdx
@@ -1,5 +1,5 @@
 ---
-title: Gatsby notes
+title: Rough notes working with Gatsby
 description: Notes from building this site on Gatsby.
 faIcon: faHammer
 date: 2021-01-09
